# region_detection

./: .gitignore  CMakeLists.txt  README.md  package.xml
apps/: autoSelectPlaneWithNdt.cpp  region_detection.cpp  showNDTVoxelwithThreeType.cpp  switchPointCloud.cpp
include/pclomp/: ndt_omp.h  voxel_grid_covariance_omp.h  voxel_grid_covariance_omp_impl.hpp
launch/: autoSelectPlaneWithNdt.launch  region_detection.launch  showNDTVoxel.launch
rviz_cfg/: selectPlane.rviz  showndt.rviz
